# image-prof-words-learning

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.py310  pyproject.toml  requirements_py310.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/services/: example_provider.py  tts_provider.py
app/templates/: sentence_generation_prompt.txt  sentence_response_schema.json  tts_request_template.json
app/utils/: __init__.py  cos_client.py
tests/: test_smoke.py
